risc0/zirgen/dsl/test/repro/missing_base_specialize.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: missing base expression for specialization

component Top() {
  x := <1>;
}

